# telegram_anonymous_contact_bot

./: .env.example  Dockerfile  README.md  compose.yaml  pyproject.toml  ruff.toml
src/: config.py  constants.py  main.py  start.sh
src/filters/: __init__.py  admin_command.py
src/handlers/: __init__.py  admin.py  chat.py
src/states/: __init__.py  set_chat.py
