[project]
name = "telegram-anonymous-contact-bot"
version = "0.1.0"
description = "Ready to use, simple asynchronous Telegram bot that you can use to receive messages from anonymous Telegram users."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.20.0.post0",
    "loguru>=0.7.3",
    "python-dotenv>=1.1.0"
]
